# font-render-comparison

./: .gitignore  Makefile.am  README.md  configure.in  font.h  freetype.c  main.c  pango.c
