AC_INIT(font-render-comparison,1.0.0)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

PKG_CHECK_MODULES([PACKAGES], [fontconfig >= 2.8.0 freetype2 >= 12.2 pangocairo >= 1.29 cairo >= 1.10 libotf >= 0.9])

AC_SUBST(PACKAGES_CFLAGS)
AC_SUBST(PACKAGES_LIBS)

AC_OUTPUT(Makefile)
